--- a/blog.html
+++ b/blog.html
@@ -21,13 +21,13 @@
                     <a href="index.html"><img src="images/logo.webp" alt="Logo Image" draggable="false"></a>
                 </div>
                 <ul class="nav">
-                    <li><a href="index.html#home" class="active">Home</a></li>
+                    <li><a href="index.html#home">Home</a></li>
                     <li><a href="index.html#about">About</a></li>
                     <li><a href="index.html#portfolio">Portfolio</a></li>
                     <li><a href="index.html#offer">Services</a></li>
                     <li><a href="index.html#Price">Price</a></li>
                     <li><a href="index.html#Team">Team</a></li>
-                    <li class="dropdown"><a href="#">Blog <i class="fa fa-angle-down" aria-hidden="true"></i></a>
+                    <li class="dropdown"><a href="#" class="active">Blog <i class="fa fa-angle-down" aria-hidden="true"></i></a>
                         <ul class="dropdown-menu">
                             <li><a href="#">Blog Post</a></li>
                         </ul>
